--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,19 @@ body{
     font-family: var(--font-family) !important;
 }
 
+.off-screen {
+    left: -100vw;
+    position: absolute;
+}
+
+.h5 {
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+}
+
 /* COLORS */
 .purple-bg {
     background-color: var(--color-primary) !important;
